k8s/monitoring/blackbox-exporter/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
spec:
  hostnames:
    - blackbox.mfin.app
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: envoy-gateway
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Service
          name: blackbox-exporter
          port: 9115
      matches:
        - path:
            type: PathPrefix
            value: /
